# LazyQML

./: .gitignore  AUTHORS.rst  LICENSE  README.md  experimentallibs.txt  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  installation.yml  ubuntu.yml
docs/: common.md  contributing.md  index.md  installation.md  lazyqml.md  usage.md
docs/examples/: intro.ipynb
lazyqml/: .lazyqmlP.py  .lazyqmlVote.py  Lanza copy.sh  Lanza.sh  __init__.py  common.py  lazyqml.py  lazyqmlP.py  lazyqmlVote.py  mem.py  slurm-5555.out  slurm-5631.out  slurm-5639.out  slurm-5647.out  slurm-5686.out  slurm-5687.out  slurm-5688.out  slurm-5692.out  slurm-5693.out  slurm-5694.out  slurm-5695.out  slurm-5696.out  slurm-5697.out  slurm-5698.out  slurm-5699.out  slurm-5700.out  slurm-5701.out  slurm-5702.out  slurm-5703.out  slurm-5714.out  slurm-5715.out  slurm-5716.out  slurm-5717.out  slurm-5724.out  slurm-5725.out  slurm-5726.out  slurm-5727.out  slurm-5728.out  slurm-5729.out  slurm-5730.out  (+1 more)
lazyqml.st/Factories/Circuits/: AmplitudeEmbedding.py
lazyqml.st/Factories/Dispatchers/: Dispatcher.py
lazyqml.st/Factories/Models/: QKNN.py  QNNTorch.py
lazyqml.tn/: __init__.py  lazyqml.py
lazyqml.tn/Factories/Circuits/: TreeTensor.py  (+1 more)
lazyqml.tn/Global/: globalEnums.py
lazyqml.tn/Interfaces/: iModel.py
lazyqml.tn/Utils/: Utils.py
lazyqml/Global/: global.py  globalEnums.py
lazyqml/Interfaces/: iAnsatz.py  iCircuit.py  iPreprocessing.py
lazyqml/Utils/: Combinations.py  Utils.py  Validator.py
lazyqml/st/: Lanza.sh  lanza_lqml.sh  lazyqml.py
lazyqml/tn/: lazyqml.py
tests/: LazyQML.ipynb  __init__.py  code_generator.ipynb  test_lazyqml.py
(+88 files in other folders)
